--- a/css/designer.css
+++ b/css/designer.css
@@ -25,6 +25,18 @@
   font-weight:bold;
 }
 
+a {
+  color: #6ea5e0; /* цвет обычной ссылки */ 
+  text-decoration: none; /*  подчеркивание у ссылок */
+}
+a:visited {
+  color: #800080; /* цвет посещённой ссылки */
+} 
+a:hover {
+  color: #6ea5e0;  
+  text-decoration: none; 
+}
+
 img {
   /*
   border: 1px solid black;
@@ -45,20 +57,27 @@ body > .centered-block {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 1.4em;
   font-family: 'lato-bold', sans-serif;
-  padding: 1.3em;
+  padding: 0.9em;
 }
 h2 {
   font-size: 1.3em;
   font-family: 'lato-bold', sans-serif;
   padding: 0.75em;
 }
+
+
 .header img.header {
   display: block;
   width: 100%;
   height: auto;
 }
+
+.header a img.header:hover {
+  background-color: #FFFAF0;
+}
+
 .floated-container {
   margin: auto;
 }
@@ -72,7 +91,7 @@ h2 {
 }
 /* при наведении */
 .floated-element:hover {
-  background-color: #E0E0E0;
+  background-color: #FFFAF0;
 }
 /* текст ссылок под картинками */
 .floated-element-text {
@@ -80,9 +99,6 @@ h2 {
   /* выравнивание текста ссылок под картинками */
   text-align: left;
   color: #393939;
-}
-a .floated-element-text {
-  color: blue;
 }
 
 .floated-element * {
@@ -101,6 +117,7 @@ a .floated-element-text {
   padding:0.4%;
 }
 
+
 #footer {
   padding-top:4em;
   padding-bottom:2em;
@@ -114,4 +131,13 @@ a .floated-element-text {
 
 .centered-text {
   text-align: center;
+}
+
+.margin-top-35 {
+  margin-top: 1.9em !important;
+}
+
+.heart {
+  margin-top: 0.8em !important;
+  margin-bottom: 0.8em !important;
 }
