--- a/css/designer.css
+++ b/css/designer.css
@@ -69,6 +69,21 @@ body > .centered-block {
   width:100%;
 }
 
+
+.centered-block-white {
+  /* общая ширина */
+  width:85%;
+  text-align:center;
+  margin:auto;
+}
+.centered-block-white {
+  padding: 0.75em;
+}
+.centered-block-white * {
+  width:100%;
+}
+
+
 h1 {
   font-size: 1.4em;
   font-family: 'lato-bold', sans-serif;
