new design with two cols

--- a/css/designer_columns.css
+++ b/css/designer_columns.css
@@ -38,7 +38,7 @@ a:visited {
   color: #800080; /* цвет посещённой ссылки */
 } 
 a:hover {
-  color: #6ea5e0;  
+  color: #4e85c0;  
   text-decoration: none; 
 }
 
@@ -53,6 +53,7 @@ body > .main-cols {
   width:95%;
   text-align:center;
   margin:auto;
+  margin-top: 10%;
 }
 
 
@@ -116,14 +117,44 @@ body > .main-cols {
   clear: both;
 }
 
-.header img.header {
-  display: block;
+
+div.header {
+  position: fixed;
+  top: 0;
   width: 100%;
-  height: auto;
+  height: 10%;
+  z-index: 999;
+  background-color: white;
 }
 
-.header a img.header:hover {
-  background-color: #FFFAF0;
+/* Style the navbar */
+#navbar {
+  overflow: hidden;
+  background-color: white;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
+
+/* Navbar links */
+#navbar a, #navbar img {
+  display: inline-block;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  vertical-align: middle;
+}
+#navbar img {
+  width:3em;
+}
+
+#navbar a:visited {
+  color: #6ea5e0;
+} 
+
+#navbar a:hover {
+  color: #4e85c0;  
+  text-decoration: none; 
 }
 
 h1 {
