--- a/css/designer.css
+++ b/css/designer.css
@@ -15,6 +15,10 @@
 *, body, div, p, span, a {
   font-family: 'lato-regular', sans-serif;
   font-size:12pt;
+  line-height: 16pt;
+}
+*, body, div, p, span {
+  color: #666;
 }
 .f-light {
   font-family: 'lato-light', sans-serif;
@@ -45,7 +49,7 @@ img {
 }
 body > .centered-block {
   /* общая ширина */
-  width:75%;
+  width:80%;
   text-align:center;
   margin:auto;
 }
@@ -246,4 +250,47 @@ padding-bottom:6.25em;
   float:left;
   text-align:left;
   text-indent: 1em;
+}
+
+
+div.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 10%;
+  z-index: 999;
+}
+
+/* Style the navbar */
+#navbar {
+  overflow: hidden;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  background-color: white;
+}
+
+/* Navbar links */
+#navbar a, #navbar img {
+  display: inline-block;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  vertical-align: middle;
+}
+#navbar img {
+  width:3em;
+}
+
+#navbar a:visited {
+  color: #6ea5e0;
+} 
+
+#navbar a:hover {
+  color: #4e85c0;  
+  text-decoration: none; 
+}
+
+#header-clear {
+  margin-top:10%;
 }
