--- a/css/designer.css
+++ b/css/designer.css
@@ -257,7 +257,7 @@ div.header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 10%;
+  height: 17%;
   z-index: 999;
 }
 
@@ -268,6 +268,7 @@ div.header {
   margin: auto;
   text-align: center;
   background-color: white;
+  padding-top: 0.85%;
 }
 
 /* Navbar links */
@@ -279,7 +280,7 @@ div.header {
   vertical-align: middle;
 }
 #navbar img {
-  width:3em;
+  width:12em;
 }
 
 #navbar a:visited {
@@ -292,5 +293,5 @@ div.header {
 }
 
 #header-clear {
-  margin-top:10%;
+  margin-top:17%;
 }
